crates/dishaster-trial/tests/snapshots/trial_taste_11ccbfbb36590dbd.snap
---
source: crates/dishaster-trial/tests/snapshot_tests.rs
---
session_info:
  seed: 1282610804685344189
  trigger_topic: taste
  max_continuation_depth: 3
  temperature: 0.8
turns:
  - turn_number: 1
    diner_speeches:
      - id: 8
        text: "今天的[菜名]怎么变了？\\我点的明明是标注的辣，\\结果一口都不辣，味道全变了。"
        emotion: 😡
        gesture: 👍
        topic: taste
    response_options:
      - speech_id: 8
        keywords:
          - keyword: 菜名
            options:
              - id: 244
                kind: objection
                summary: 应自行询问
              - id: 82
                kind: objection
                summary: 解释出品差异
              - id: 243
                kind: agreement
                summary: 优化标签
              - id: 267
                kind: agreement
                summary: 放大标签
    selected_response:
      speech_id: 8
      keyword_idx: 0
      option_idx: 1
    manager_speeches:
      - id: 82
        summary: 解释出品差异
        text: "关于口味与图片不符，\\我会向厨师确认出品标准\\并说明是否为配方调整，\\并在必要时恢复原配方。"
        emotion: 🙂
    impact:
      reputation_score: -1.5
      mood_change: -0.15
      trust_change: -0.075
      patience_change: -3
    continuation_decision: false
final_state:
  total_turns: 1
  asked_questions:
    - 8
  continuation_depth: 0
